webmarkup student 686533 Colin Krukkert

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="style.css"
+            href="css/style.css"
         />
 
     </head>      
         <body id="index">
-            <a><img src= "/web markup/img/logomarkup.png" alt="logo" style="width:20%"> 
+            <header id= "header">
+
+            <figure><img class= "logo" src ="/STUDIE/web markup/website/img/logomarkup.png" style="width:20%"> 
+                </figure>
             </a>  
                 <h1>
                 BestTravel.NL
@@ -22,18 +25,24 @@
             <h2>
                 Voor al uw reizen, lang of kort, spring maar bij ons aan boord. 
             </h2>      
-            <nav class="container">
-            <ul>
+
+    </nav>
+    <nav class="container" >
+        <ul>
+        <nav class="hamburger1"></nav>               
+        <nav class="hamburger2"></nav>               
+        <nav class="hamburger3"></nav>         
+        </ul>      
+    <nav class="nav">
+        <ul onclick="myFunction(this)">
                 <li><a href="bestdestinations.html">Best Destinations</a></li>
                 <li><a href="tickets.html">Tickets</a></li>
                 <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <nav class="container" onclick="myFunction(this)">
-                <nav class="hamburger1"></nav>               
-                <nav class="hamburger2"></nav>               
-                <nav class="hamburger3"></nav>               
-        </nav>
-    </nav>
+        </ul>
+</nav>
+</nav>
+
+</header>
 
 <nav class="contain">
         <section>
@@ -44,7 +53,7 @@
                 </b>
                 </header>   
                 <video width="500" height="300" autoplay muted loop>
-                    <source src="/web markup/img/stock-footage-business-people-at-busy-airport-pulling-trolley-bags-arriving-and-departing-terminal-tourists.webm">
+                    <source src="/STUDIE/web markup/website/img/stock-footage-business-people-at-busy-airport-pulling-trolley-bags-arriving-and-departing-terminal-tourists.webm">
                 </video>    
                 <header>           
                     Op het moment bieden wij drie bestemingen aan die wij voor u aanbieden: Rome, Pensacola en Monaco 
@@ -65,7 +74,7 @@
                     klik hier om naar vakantiehuizen te zoeken op d-reizen.nl (Rome)
                 </p>
                 </a>
-                <figure><img src= "/web markup/img/Rome_panorama_sb1.jpg" alt="logoRome1" style="width:50%"> 
+                <figure><img class="logoRome1" src="/STUDIE/web markup/website/img/Rome_panorama_sb1.jpg" style="width:50%"> 
                     <figcaption>Photo of Rome | Photo taken by David Köhler | unsplash.com</figcaption>
                 </figure> 
             </article>
@@ -80,8 +89,7 @@
                     <a href="https://www.d-reizen.nl/zonvakantie/verenigde-staten/florida"> 
                     <p>klik hier om naar vakantiehuizen te zoeken op d-reizen.nl (Florida)</p>
                     </a>
-                </footer>
-                <figure><img src= "/web markup/img/Pensacola.jpg" alt="logoPensacola" style="width: 50%;">
+                <figure><img class= "logoPensacola" src="/STUDIE/web markup/website/img/Pensacola.jpg" style="width: 50%;">
                     <figcaption>Photo of Pensacola | Photo belongs to Kevin Hausfeld | kevininjurylaw.com</figcaption>
                     </figure> 
                 </a> 
@@ -96,15 +104,13 @@
                 </p>          
                     <a href="https://www.d-reizen.nl/vakantie/zoeken?Country=FR&amp;Place=FR_NICE&amp;StartDate=25-04-2022&amp;Duration=8-9&amp;Margin=3&amp;Adults=2&amp;Transport=VL&amp;ResultSets=1&amp;SortBy=POPULARITY%20DESC">
                         <p>klik hier om naar vakantiehuizen te zoeken op d-reizen.nl (Nice)</p>
-                        </a>
-                    </footer>      
-                <figure><img src= "/web markup/img/9281670581_4270e671e0_k.JPEG"  alt="logoNice" style="width: 50%;"> 
+                        </a>    
+                <figure><img class= "logoNice" src="/STUDIE/web markup/website/img/9281670581_4270e671e0_k.JPEG" style="width: 50%;"> 
                 <figcaption>Photo of Nice | The panorama from Castle Hill, Nice | © Shann Yu/flickr | picture founded on theculturetrip.com </figcaption>
                 </figure> 
+                </article>
             </section>   
-        </article>
         </nav>
- <nav class="contain">   
 <nav class="aside">
         <aside>
             <ol>
@@ -116,7 +122,6 @@
                 <li>Monaco (Monaco/Frankrijk) | een soevereine stadstaat aan de Franse Rivièra</li>
             </ol>
         </aside>
-        </nav>
         </nav>
         <section class="cookie">
             <p>
