--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,14 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="style.css"
+            href="css/style.css"
         />
     </head>
 
     <body id="contact">
-        <figure><img src= "/web markup/img/logomarkup.png" alt="logo" style="width:20%"> 
-        </figure> 
+        <header>
+            <figure><img class= "logo" src ="/STUDIE/web markup/website/img/logomarkup.png" style="width:20%"> 
+            </figure> 
         <h1>
             BestTravel.NL
         </h1>
@@ -24,24 +25,22 @@
         </h2> 
 
 
-        <nav class="menu">
+        <nav class="container" >
             <ul>
+            <nav class="hamburger1"></nav>               
+            <nav class="hamburger2"></nav>               
+            <nav class="hamburger3"></nav>         
+            </ul>      
+        </nav>
+        <nav class="nav">
+            <ul onclick="myFunction(this)">
                 <li><a href="index.html">Index</a></li>
                 <li><a href="bestdestinations.html">Best Bestinations</a></li>
                 <li><a href="tickets.html">Tickets</a></li>
             </ul>
-        </nav>
-        <nav class="menu">
-            <nav id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>              
-        <nav class="container" onclick="myFunction(this)">
-            <nav class="hamburger1"></nav>               
-            <nav class="hamburger2"></nav>               
-            <nav class="hamburger3"></nav>                
-        </nav>              
-        </nav>
+    </nav>
+     </header>
+       <nav class="contain">
         <article id="contacttext">
 
             <header>
@@ -69,22 +68,21 @@
           </fieldset>
         </form>
         </nav>
-        <nav class="contain">
+        </nav>
 <nav class="aside">
         <aside>
             <ol>
-                <span><figure><img src= "/web markup/img/vliegtickets-aruba.jpg" alt="logoAruba" style="width: 10%;">
+                <span><figure><img class= "logoAruba" src="/STUDIE/web markup/website/img/vliegtickets-aruba.jpg" style="width: 10%;">
                     <figcaption>Aruba</figcaption>
                     </figure></span>
-                <span><figure><img src= "/web markup/img/vliegtickets-bonaire.jpg" alt="logoBonaire" style="width: 10%;">
+                <span><figure><img class= "logoBonaire" src="/STUDIE/web markup/website/img/vliegtickets-bonaire.jpg" style="width: 10%;">
                     <figcaption>Bonaire</figcaption>
                     </figure></span>
-                <span><figure><img src= "/web markup/img/vliegtickets-curacao.jpg" alt="logoCuracao" style="width: 10%;">
+                <span><figure><img class= "logoCuracao" src="/STUDIE/web markup/website/img/vliegtickets-curacao.jpg" style="width: 10%;">
                     <figcaption>Curaçao</figcaption>
                     </figure></span>>
             </ol>
         </aside>
-        </nav>
         </nav>
         <section class="cookie">
             <p>
