--- a/tickets.html
+++ b/tickets.html
@@ -9,31 +9,35 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="style.css"
+            href="css/style.css"
         />    
     </head>
         <body id="tickets">
-            <figure><img src= "/web markup/img/logomarkup.png" alt="logo" style="width:20%"> 
-            </figure> 
-            <h1>
-                BestTravel.NL
-            </h1>
-            <h2>
-                Voor al uw reizen, lang of kort, spring maar bij ons aan boord. 
-            </h2> 
+            <header id= "header">
+                <figure><img class= "logo" src ="/STUDIE/web markup/website/img/logomarkup.png" style="width:20%"> 
+                </figure> 
+                <h1>
+                    BestTravel.NL
+                </h1>
+                <h2>
+                    Voor al uw reizen, lang of kort, spring maar bij ons aan boord. 
+                </h2>  
                        
-            <nav class="container">
-                <ul>
-                    <li><a href="index.html">Index</a></li>
-                    <li><a href="bestdestinations.html">best Destinations</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <nav class="container" onclick="myFunction(this)">
-                    <nav class="hamburger1"></nav>               
-                    <nav class="hamburger2"></nav>               
-                    <nav class="hamburger3"></nav>                 
-            </nav>
+        <nav class="container" >
+            <ul>
+            <nav class="hamburger1"></nav>               
+            <nav class="hamburger2"></nav>               
+            <nav class="hamburger3"></nav>         
+            </ul>      
         </nav>
+        <nav class="nav">
+            <ul onclick="myFunction(this)">
+                <li><a href="index.html">Index</a></li>
+                <li><a href="bestdestinations.html">best Destinations</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+    </nav>
+        </header>
 
         <article id="ticketstext">
 
@@ -61,13 +65,13 @@
             <nav class="aside">
             <aside>
                 <ol>
-                    <span><figure><img src= "/web markup/img/vliegtickets-aruba.jpg" alt="logoAruba" style="width: 10%;">
+                    <span><figure><img class= "logoAruba" src = "/STUDIE/web markup/website/img/vliegtickets-aruba.jpg" style="width: 10%;">
                         <figcaption>Aruba</figcaption>
                         </figure></span>
-                    <span><figure><img src= "/web markup/img/vliegtickets-bonaire.jpg" alt="logoBonaire" style="width: 10%;">
+                    <span><figure><img class= "logoBonaire" src= "/STUDIE/web markup/website/img/vliegtickets-bonaire.jpg" style="width: 10%;">
                         <figcaption>Bonaire</figcaption>
                         </figure></span>
-                    <span><figure><img src= "/web markup/img/vliegtickets-curacao.jpg" alt="logoCuracao" style="width: 10%;">
+                    <span><figure><img class= "logoCuracao" src= "/STUDIE/web markup/website/img/vliegtickets-curacao.jpg" style="width: 10%;">
                         <figcaption>Curaçao</figcaption>
                         </figure></span>>
                 </ol>
